--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -1,1 +1,35 @@
-p some content 
+include ../head.pug
+body
+  .container.mt-5
+    h1 Locals Farmers Market Online Directory 
+    table.table.table-responsive.table-hover.table-striped.table-dark
+      thead
+        tr
+          th(scope="col") ID
+          th(scope="col") Farm Name
+          th(scope="col") Available From
+          th(scope="col") Product
+          th(scope="col") Contact Phone
+          th(scope="col") In stock
+          th(scope="col") Actions
+      tbody
+        tr
+          td 1
+          td Funny Chicken  
+          td 2024-03-11 08:00
+          td whole chicken meat 
+          td +998991234567
+          td 100
+          td
+            button.btn.btn-primary.btn-sm Edit
+            button.btn.btn-danger.btn-sm Delete
+        tr
+          td 1
+          td Granny's Love 
+          td 2024-03-14 11:00
+          td carrot in kgs  
+          td +998991356789
+          td 60
+          td
+            button.btn.btn-primary.btn-sm Edit
+            button.btn.btn-danger.btn-sm Delete
