--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -1,7 +1,7 @@
 include ../head.pug
 body
   .container.mt-5
-    h1 List
+    h1 Local Farmers Market Online Directory
     table.table.table-responsive.table-hover.table-striped.table-dark
       thead
         tr
@@ -18,9 +18,7 @@ body
           document.addEventListener('DOMContentLoaded', function() {
             axios.get('/api/product')
               .then(function(response) {
-                return response.data; // Return the data from the first .then() block
-              })
-              .then(function(products) { // Now products is the return value from the previous .then() block
+                const products = response.data;
                 const tableBody = document.querySelector('table tbody');
                 products.forEach(product => {
                   const row = document.createElement('tr');
@@ -33,7 +31,7 @@ body
                     <td>${product.product.inStock}</td>
                     <td>
                       <button class="btn btn-primary btn-sm">Edit</button>
-                      <button class="btn btn-danger btn-sm">Delete</button>
+                      <button class="btn btn-danger btn-sm" data-id="${product.id}">Delete</button>
                     </td>
                   `;
                   tableBody.appendChild(row);
@@ -42,4 +40,18 @@ body
               .catch(function(error) {
                 console.log(error);
               });
+
+            // Use event delegation for delete buttons
+            document.addEventListener('click', function(event) {
+              if (event.target && event.target.classList.contains('btn-danger')) {
+                const productId = event.target.getAttribute('data-id');
+                axios.delete(`/api/product/${productId}`).then(function(response) {
+                  console.log('Delete successful', response);
+                  location.reload(); // Reload the page after successful deletion
+                })
+                .catch(function(error) {
+                  console.log('Error deleting product', error);
+                });
+              }
+            });
           });
