--- a/views/home/add_update.pug
+++ b/views/home/add_update.pug
@@ -1,35 +1,75 @@
 include ../head.pug
 body
-    .container.mt-5
-      h1 Add/Update Farmer Listing
-      form(action="/submit-farmer-form" method="POST")
-        .mb-3
-          label(for="farmName" class="form-label") Farm Name
-          input(type="text" class="form-control" id="farmName" name="farmName" required)
-        .mb-3
-          label(for="availableFrom" class="form-label") Available From
-          .input-group.date(id="datetimepicker1" data-target-input="nearest")
-            input(type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1" name="availableFrom" required)
-            .input-group-append(data-target="#datetimepicker1" data-toggle="datetimepicker")
-              .input-group-text
-                i.fas.fa-calendar-alt
-        .mb-3
-          label(for="product" class="form-label") Product
-          input(type="text" class="form-control" id="product" name="product" required)
-        .mb-3
-          label(for="contactPhone" class="form-label") Contact Phone
-          input(type="tel" class="form-control" id="contactPhone" name="contactPhone" required)
-        .mb-3
-          label(for="inStock" class="form-label") In Stock
-          input(type="number" class="form-control" id="inStock" name="inStock" required)
-        button(type="submit" class="btn btn-primary") Add/Edit
+  .container.mt-5
+    h1 #{mode}
+    form(action="/submit-product-form" method="POST")
+      .mb-3
+        label(for="farmName" class="form-label") Farm Name
+        input(type="text" class="form-control" id="farmName" name="farmName" required)
+      .mb-3
+        label(for="availableFrom" class="form-label") Available From
+        .input-group.date(id="datetimepicker1" data-target-input="nearest")
+          input(type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1" id="availableFrom" name="availableFrom" required)
+          .input-group-append(data-target="#datetimepicker1" data-toggle="datetimepicker")
+            .input-group-text
+              i.fas.fa-calendar-alt
+      .mb-3
+        label(for="product" class="form-label") Product
+        input(type="text" class="form-control" id="product" name="product" required)
+      .mb-3
+        label(for="contactPhone" class="form-label") Contact Phone
+        input(type="tel" class="form-control" id="contactPhone" name="contactPhone" required)
+      .mb-3
+        label(for="inStock" class="form-label") In Stock
+        input(type="number" class="form-control" id="inStock" name="inStock" required)
+      button(type="submit" class="btn btn-success") #{mode === 'Update' ? 'Update' : 'Add'}
+      span &nbsp;
+      button(type="submit" class="btn btn-primary" onclick="window.location.href='/'") Back to list
 
-    script.
-        const picker = new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),{
-            localization: {
-                'locale': 'uz'
-            }
-        });
-        picker.dates.formatInput = function(date) {
-            return moment(date).format('YYYY-MM-DD HH:mm')
+  script.
+    const format = 'DD/MM/YYYY HH:mm'
+    const picker = new tempusDominus.TempusDominus(document.getElementById('datetimepicker1'),{
+        localization: {
+            'locale': 'fr'
         }
+    })
+    picker.dates.formatInput = function(date) {
+        return moment(date).format(format)
+    }
+    // populate your input fields as this operation is "Update" 
+    if ("#{mode}" === "Update") {
+      const productData = !{JSON.stringify(productData || {})}.product;
+      document.getElementById('farmName').value = productData.farmName || '';
+
+      picker.dates.setValue(
+        new tempusDominus.DateTime(moment(productData.availableFrom, format))
+      );
+
+      document.getElementById('product').value = productData.product || '';
+      document.getElementById('contactPhone').value = productData.contactPhone || '';
+      document.getElementById('inStock').value = productData.inStock || '';
+    }
+
+    function submitForm() {
+      const productData = {
+        farmName: document.getElementById('farmName').value,
+        availableFrom: document.getElementById('availableFrom').value,
+        product: document.getElementById('product').value,
+        contactPhone: document.getElementById('contactPhone').value,
+        inStock: document.getElementById('inStock').value,
+      };
+
+      const url = "#{mode}" === "Update" ? `/api/product/${productData.id}` : '/api/product';
+      const method = "#{mode}" === "Update" ? 'put' : 'post';
+
+      axios[method](url, productData).then(response => {
+        alert('Success!');
+        location.href = '/'
+      })
+      .catch(error => {
+        if(error.response)
+          alert(JSON.stringify(error.response.data.errors))
+        else
+          alert(error)
+      });
+    }
