--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -30,7 +30,7 @@ body
                     <td>${product.product.contactPhone}</td>
                     <td>${product.product.inStock}</td>
                     <td>
-                      <button class="btn btn-primary btn-sm">Edit</button>
+                      <button class="btn btn-primary btn-sm" data-id="${product.id}" onclick="window.location.href='/update/${product.id}'">Update</button>
                       <button class="btn btn-danger btn-sm" data-id="${product.id}">Delete</button>
                     </td>
                   `;
@@ -41,7 +41,7 @@ body
                 console.log(error);
               });
 
-            // Use event delegation for delete buttons
+            // Event delegation for delete buttons
             document.addEventListener('click', function(event) {
               if (event.target && event.target.classList.contains('btn-danger')) {
                 const productId = event.target.getAttribute('data-id');
